   (instead of attaching it several times with '_' appended to the keys). You
   can get the old behaviour by setting overwrite=False.

Bug fixes:
 - When showing the size of the full report, take the compressed size of binary
   values instead of their uncompressed size, as the crash db upload will use
   the compressed values.

1.21 (2011-06-08)
-----------------
Improvements:
 - Supply --desktop option to kdesudo to improve the description which program
   is requesting administrative privileges.
 - apport-checkreports: Exit with status 2 if there are new reports, but apport
   is disabled. This helps crash notification GUIs to not display new crash
   reports in that case. Thanks to Michael Vogt for the original patch.
 - Add data/is-enabled: Shell script to check if apport is enabled. Non-Python
   programs (which can't use apport.packaging.enabled() ) can call this instead
   of having to parse /etc/default/apport themselves, and just check the exit
   code. Inspired by original patch from Michael Vogt, thanks!

Bug fixes:
 - apport-gtk: HTML-escape text for dialogs with URLs. (LP: #750870)
 - dump_acpi_tables.py: Check to see if acpi/tables dir is mounted first.
   Thanks Brian Murray. (LP: #729622)
 - man/apport-cli.1: Document recently added -w/--window option. Thanks Abhinav
   Upadhyay! (LP: #765600)
 - Use kde-open instead of kfmclient to open URLs under KDE. Thanks Philip
   Muškovac. (LP: #765808)

1.20.1 (2011-03-31)
-------------------
Bug fixes:
 - Add bash completion support for new -w/--window option that was introduced
   in 1.20. Thanks Philip Muškovac.
 - apport-unpack: Fix crash if target directory already exists.
 - Fix crash if UnreportableReason is a non-ASCII string. (LP: #738632)
 - Fix crash if application from desktop name is a non-ASCII string.
   (LP: #737799)
 - unkillable_shutdown: Fix rare crash if ExecutablePath does not exist (any
   more). (LP: #537904)